--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
     "html-webpack-plugin": "^2.30.1",
+    "jshint": "^2.9.5",
+    "jshint-loader": "^0.8.4",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
