--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "webpack-templet",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
   "main": "index.js",
   "dependencies": {
     "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
+    "eslint": "^4.5.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.2.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
-    "jshint": "^2.9.5",
-    "jshint-loader": "^0.8.4",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
@@ -26,8 +34,10 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --open -d"
+    "start": "webpack-dev-server --open -d",
+    "lint": "eslint --ext .js,.vue src"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
