--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server --open -d",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "lintfix":"eslint --fix .js,.vue src"
   },
   "author": "",
   "license": "ISC",
