--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "webpack-dev-server": "^2.7.1"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open -d",
+    "build": "eslint --fix .js,.vue src & webpack",
+    "start": "webpack-dev-server --open -d --watch --colors",
     "lint": "eslint --ext .js,.vue src",
     "lintfix":"eslint --fix .js,.vue src"
   },
